--- a/safe_styler.css
+++ b/safe_styler.css
@@ -1,11 +1,193 @@
 
-/* Styling for font family select options */
+/*
+ *  Styling for font family select options
+ */
+
+/* Sans Serif */
 .font-family-select option[value="Arial"] {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.font-family-select option[value="Arial Black"] {
+  font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
+}
+
+.font-family-select option[value="Arial Narrow"] {
+  font-family: "Arial Narrow", Arial, sans-serif;
+}
+
+.font-family-select option[value="Arial Rounded MT Bold"] {
+  font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+}
+
+.font-family-select option[value="Avant Garde"] {
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+}
+
+.font-family-select option[value="Calibri"] {
+  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+}
+
+.font-family-select option[value="Candara"] {
+  font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+}
+
+.font-family-select option[value="Century Gothic"] {
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+}
+
+.font-family-select option[value="Franklin Gothic Medium"] {
+  font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
+}
+
+.font-family-select option[value="Futura"] {
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+}
+
+.font-family-select option[value="Geneva"] {
+  font-family: Geneva, Tahoma, Verdana, sans-serif;
+}
+
+.font-family-select option[value="Gill Sans"] {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+}
+
+.font-family-select option[value="Helvetica"] {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .font-family-select option[value="Impact"] {
-    font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 }
 
-/* et cetera */
+.font-family-select option[value="Lucida Grande"] {
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+}
+
+.font-family-select option[value="Optima"] {
+  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+}
+
+.font-family-select option[value="Segoe UI"] {
+  font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+}
+
+.font-family-select option[value="Tahoma"] {
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
+}
+
+.font-family-select option[value="Trebuchet MS"] {
+  font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+}
+
+.font-family-select option[value="Verdana"] {
+  font-family: Verdana, Geneva, sans-serif;
+}
+
+/* Serif */
+.font-family-select option[value="Baskerville"] {
+  font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
+}
+
+.font-family-select option[value="Big Caslon"] {
+  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
+}
+
+.font-family-select option[value="Bodoni MT"] {
+  font-family: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+}
+
+.font-family-select option[value="Book Antiqua"] {
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+}
+
+.font-family-select option[value="Calisto MT"] {
+  font-family: "Calisto MT", "Bookman Old Style", Bookman, "Goudy Old Style", Garamond, "Hoefler Text", "Bitstream Charter", Georgia, serif;
+}
+
+.font-family-select option[value="Cambria"] {
+  font-family: Cambria, Georgia, serif;
+}
+
+.font-family-select option[value="Didot"] {
+  font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+}
+
+.font-family-select option[value="Garamond"] {
+  font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+}
+
+.font-family-select option[value="Georgia"] {
+  font-family: Georgia, Times, "Times New Roman", serif;
+}
+
+.font-family-select option[value="Goudy Old Style"] {
+  font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
+}
+
+.font-family-select option[value="Hoefler Text"] {
+  font-family: "Hoefler Text", "Baskerville old face", Garamond, "Times New Roman", serif;
+}
+
+.font-family-select option[value="Lucida Bright"] {
+  font-family: "Lucida Bright", Georgia, serif;
+}
+
+.font-family-select option[value="Palatino"] {
+  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+}
+
+.font-family-select option[value="Perpetua"] {
+  font-family: Perpetua, Baskerville, "Big Caslon", "Palatino Linotype", Palatino, "URW Palladio L", "Nimbus Roman No9 L", serif;
+}
+
+.font-family-select option[value="Rockwell"] {
+  font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
+}
+
+.font-family-select option[value="Rockwell Extra Bold"] {
+  font-family: "Rockwell Extra Bold", "Rockwell Bold", monospace;
+}
+
+.font-family-select option[value="Times New Roman"] {
+  font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
+}
+
+/* Monospaced */
+.font-family-select option[value="Andale Mono"] {
+  font-family: "Andale Mono", AndaleMono, monospace;
+}
+
+.font-family-select option[value="Consolas"] {
+  font-family: Consolas, monaco, monospace;
+}
+
+.font-family-select option[value="Courier New"] {
+  font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+}
+
+.font-family-select option[value="Lucida Console"] {
+  font-family: "Lucida Console", "Lucida Sans Typewriter", Monaco, "Bitstream Vera Sans Mono", monospace;
+}
+
+.font-family-select option[value="Lucida Sans Typewriter"] {
+  font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+}
+
+.font-family-select option[value="Monaco"] {
+  font-family: Monaco, Consolas, "Lucida Console", monospace;
+}
+
+/* Fantasy */
+.font-family-select option[value="Copperplate"] {
+  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+}
+
+.font-family-select option[value="Papyrus"] {
+  font-family: Papyrus, fantasy;
+}
+
+/* Script */
+.font-family-select option[value="Brush Script MT"] {
+  font-family: "Brush Script MT", cursive;
+}
